# minecraft-bedrock-mcp

./: .gitignore  LICENSE  README.md  mcp_server.py  pyproject.toml  server.py
.claude/agents/: mcbe-addon-developer.md
src/mc_bedrock_mcp/: __init__.py  mc.py  registry.py  schemas.py
src/mc_bedrock_mcp/builders/: __init__.py  pyramid.py  sphere.py  tower.py
tests/: test_registry.py
